--- a/Core.Application/Core.Application.csproj
+++ b/Core.Application/Core.Application.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Core.Domain\Core.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Products\Queries\Availability\" />
+  </ItemGroup>
+
 </Project>
