Enhance product management features and refactor code
- Updated `TourPackageDto` to include new properties and remove `Exclusions`.
- Improved formatting and removed unused directives in several query handler files.
- Modified `IExternalProductApiAdapter`, `IProductRepository`, and `IProductService` interfaces to add new methods for fetching and purchasing products.
- Corrected property names in mappers from `availability` to `Availability`.
- Added methods for getting products by ID and purchasing in service and repository classes.
- Introduced `PurchaseResponseDto` for encapsulating purchase responses.
- Created command and handler for processing purchase requests.
- Updated database schema through migration files to reflect new properties.
- Adjusted connection string in `appsettings.json` and improved dependency injection in `Program.cs` and `ServiceCollectionExtensions.cs`.

--- a/ProductService.API/appsettings.json
+++ b/ProductService.API/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "ProductDb": "Server=localhost;Database=ProductDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "ProductDb": "Server=localhost;Database=ProductDb;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;"
+
   },
   "AllowedHosts": "*"
 }
