Add CustomProduct support and enhance product management
- Made `ImageUrl` in `ProductDto` nullable.
- Implemented `DeleteProductAsync` in repository and service interfaces.
- Enhanced query handlers to support `CustomProduct` with filtering.
- Updated `Product` class to make `ExternalId` nullable.
- Created `CustomProduct` entity and repository for CRUD operations.
- Added new command and query classes for product management.
- Updated controllers and service registrations for new functionality.
- Created migration files to update the database schema.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,9 +30,9 @@ services:
          condition: service_healthy
 
 networks:
-    default:
-        name: productdb_network
-        driver: bridge
+  default:
+    name: bookwithext-network
+    external: true
 
 volumes:
   productdb_data:
