Add new projects and enhance product service functionality
- Introduced `Core.DomainTests` and `Application.IntegrationTest` projects to the solution.
- Updated solution configuration for new test projects.
- Refactored `AddProductCommandHandler` to use a custom product service.
- Simplified null checks and improved exception handling in `PurchaseProductCommandHandler`.
- Enhanced `IProductRepository` and `IProductService` interfaces with new methods for product deletion.
- Improved mapping logic in `CustomProductMapper` and `HolidayPackageMapper`.
- Updated `ProductController` with new endpoints for product management.
- Modified Dockerfile to exclude test projects from the build context.
- Added integration tests for product repository and service functionalities.
- Created migration files to update the database schema for `ImageUrl`.
- Refactored service collection extensions for better service registration.
- Enhanced exception handling and validation across services and repositories.

--- a/ProductService.API/Dockerfile
+++ b/ProductService.API/Dockerfile
@@ -10,10 +10,10 @@ COPY ["Core.Domain/*.csproj", "Core.Domain/"]
 COPY ["Infrastructure.Adapters/*.csproj", "Infrastructure.Adapters/"]
 COPY ["Infrastructure.Persistence/*.csproj", "Infrastructure.Persistence/"]
 COPY ["ProductService.API/ProductServiceAPI.csproj", "ProductService.API/"]
-COPY ["Core.ApplicationTests/*.csproj", "Core.ApplicationTests/"]
+#COPY ["Core.ApplicationTests/*.csproj", "Core.ApplicationTests/"]
 
 # Restore dependencies
-RUN dotnet restore
+RUN dotnet restore "ProductService.API/ProductServiceAPI.csproj"
 
 # Copy the rest of the code
 COPY . .
