Refactor product services and repositories for clarity
This commit includes significant refactoring of the product-related services, repositories, and DTOs to improve structure and organization. Key changes include:

- Cleaned up `ProductRepositoryFactoryTests.cs` and `ProductServiceFactoryTests.cs` by removing unnecessary using directives and comments.
- Updated `DatabaseFixture.cs` with necessary namespaces for better context.
- Enhanced `CustomProductServiceIntegrationTests.cs` for improved setup and assertions.
- Modified DTO files (`CustomProductDto.cs`, `HolidayPackageDto.cs`, `TourPackageDto.cs`)

--- a/Infrastructure.Adapters/Infrastructure.Adapters.csproj
+++ b/Infrastructure.Adapters/Infrastructure.Adapters.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="HolidayPackageAdapter.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Core.Application\Core.Application.csproj" />
     <ProjectReference Include="..\Core.Domain\Core.Domain.csproj" />
   </ItemGroup>
