--- a/Infrastructure.AdaptersTests/Infrastructure.AdaptersTests.csproj
+++ b/Infrastructure.AdaptersTests/Infrastructure.AdaptersTests.csproj
@@ -8,12 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.6" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="MSTest" Version="3.6.4" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core.Domain\Core.Domain.csproj" />
+    <ProjectReference Include="..\Infrastructure.Adapters\Infrastructure.Adapters.csproj" />
   </ItemGroup>
 
   <ItemGroup>
